<?xml version="1.0"?>
<package format="2">
  <name>ros_dds_bridge</name>
  <version>0.1.0</version>
  <description>The ROS1 Melodic package for bridging ROS topics to DDS (Fast DDS)</description>
  <maintainer email="arthur@example.com">Arthur</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- External libraries: Fast DDS / Fast CDR should be satisfied on system -->
  <build_depend>fastdds</build_depend>
  <build_depend>fastcdr</build_depend>
  <exec_depend>fastdds</exec_depend>
  <exec_depend>fastcdr</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
